fixed CSS at hero-component on smaller screens

--- a/src/app/hero/hero-media-queries.scss
+++ b/src/app/hero/hero-media-queries.scss
@@ -70,7 +70,7 @@
     flex-direction: column;
     align-items: center;
     margin-top: 32px;
-    margin-bottom: 32px;
+    margin-bottom: 130px;
     text-align: center;
   }
 
@@ -85,6 +85,7 @@
 
 @media (max-width: 920px) {
   .hero-container-center {
+    margin-bottom: 224px;
     > h2 {
       font-size: 32px;
     }
