--- a/src/app/legal-notice/legal-notice.component.scss
+++ b/src/app/legal-notice/legal-notice.component.scss
@@ -3,7 +3,6 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 4;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -56,23 +55,6 @@
     height: 24px;
     background-image: url("../../../public/assets/icons/details_close_hover.png");
   }
-}
-
-.content-wrapper {
-  height: 500px;
-  overflow-y: auto;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  gap: 24px;
-
-  word-break: break-word;
-  overflow-wrap: break-word;
-  white-space: normal;
-  width: 100%;
-  box-sizing: border-box;
 }
 
 @media (max-width: 1300px) {
