--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -3,13 +3,12 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 4;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.imprint-container {
+.privay-policy-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -24,7 +23,7 @@
   padding: 62px;
 }
 
-.impress-card-close-btn-container {
+.privacy-card-close-btn-container {
   position: absolute;
   top: 0px;
   right: 0px;
@@ -79,7 +78,7 @@
   :host {
     width: 95%;
   }
-  .imprint-container {
+  .privay-policy-container {
     width: 100%;
     height: 100%;
     padding: 48px;
